Refactor code structure for improved readability and maintainability
Gym works
Items works

stuff works

--- a/backend/tools/gym.html
+++ b/backend/tools/gym.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Torn Stat Gain Calculator</title>
+  <title>Nizzia City Stat Gain Calculator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
