feat: Implement gym training functionality with energy management and stat updates
- Added gym.js to handle player training, including energy consumption and stat gain estimation.
- Created inventory.js to display user inventory items dynamically.
- Developed job.js for managing player jobs, including hiring, promoting, and leaving jobs.
- Introduced money.js for managing player finances, including adding, removing, and spending money.
- Enhanced utils.js with utility functions for user and player session management.
- Styled auth pages with auth-pages.css for consistent user experience.
- Designed city.css for shop and item display layout.
- Created gym.css for gym interface styling, including stat display and training controls.
- Developed inventory.css for inventory layout and item card styling.
- Styled topbar.css for consistent navigation across pages.
- Created HTML templates for player authentication (login, register, create player) and game pages (casino, city, gym, inventory, job, money, crimes).

--- a/backend/tools/itemCreator.html
+++ b/backend/tools/itemCreator.html
@@ -175,6 +175,7 @@
       <button type="submit">Create Item</button>
     </form>
     <div class="result" id="result"></div>
+    <button id="downloadItemsBtn" type="button" style="margin-top:10px;">Download all items (JSON)</button>
   </div>
 
   <div class="item-list">
@@ -284,6 +285,12 @@
 
     // initial load
     fetchItems();
+
+    // download all items as JSON via backend route
+    document.getElementById('downloadItemsBtn').addEventListener('click', () => {
+      // Trigger file download from backend
+      window.location.href = 'http://localhost:5000/api/items/download';
+    });
   </script>
 </body>
 </html>
