--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,7 @@
   <title>Nizzia City</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/style/login.css">
-  <style>
-  </style>
+  
 </head>
 <body>
   <div class="overlay">
@@ -16,7 +15,7 @@
     </div>
     <div class="main-content">
       <h2>Login</h2>
-      <form>
+      <form action="auth/login.html">
         <div class="form-group">
           <label for="username">Username</label>
           <input id="username" type="text" placeholder="Enter your username" autocomplete="username">
@@ -26,7 +25,7 @@
           <input id="password" type="password" placeholder="Enter your password" autocomplete="current-password">
         </div>
         <button class="btn" type="submit">Login</button>
-        <button class="btn" type="button" onclick="window.location.href='#register'">Register</button>
+        <a class="btn" href="auth/register.html" style="display:inline-block; text-align:center;">Register</a>
       </form>
       <div class="links">
         <a href="#">Forgot Password?</a> | 
