The Stock Update!

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -52,6 +52,7 @@
       <li><a href="job.html">Job</a></li>
       <li><a href="gym.html">Gym</a></li>
       <li><a href="casino.html">Casino</a></li>
+      <li><a href="stocks.html">Stocks</a></li>
       <li><a href="crimes.html">Crimes</a></li>
       <li><a href="money.html">Money</a></li>
     </ul>
