--- a/frontend/crimes.html
+++ b/frontend/crimes.html
@@ -8,11 +8,7 @@
   <link rel="stylesheet" href="assets/style/topbar.css" />
 </head>
 <body>
-  <div class="topbar">
-    <div class="brand">Nizzia City</div>
-    <div class="spacer"></div>
-    <a class="link" href="game.html">Home</a>
-  </div>
+  
 
   <div class="sidebar">
     <h2>Crimes</h2>
@@ -31,5 +27,9 @@
     </div>
   </div>
 
+  <script src="assets/js/api.js"></script>
+  <script src="assets/js/utils.js"></script>
+  <script src="assets/js/ui.js"></script>
+  <script src="assets/js/pages/crimes.js"></script>
 </body>
 </html>
