--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -9,11 +9,7 @@
   <link rel="stylesheet" href="assets/style/inventory.css" />
 </head>
 <body>
-  <div class="topbar">
-    <div class="brand">Nizzia City</div>
-    <div style="flex:1"></div>
-    <a class="link" href="city.html">City</a>
-  </div>
+  
 
   <div class="sidebar">
     <h2>Inventory</h2>
@@ -34,6 +30,7 @@
 
   <script src="assets/js/api.js"></script>
   <script src="assets/js/utils.js"></script>
+  <script src="assets/js/ui.js"></script>
   <script src="assets/js/pages/inventory.js"></script>
 </body>
 </html>
