--- a/frontend/game.html
+++ b/frontend/game.html
@@ -8,19 +8,7 @@
   <link rel="stylesheet" href="assets/style/topbar.css">
 </head>
 <body>
-
-  <!-- Top Navbar -->
-  <div class="topbar">
-    <div class="brand">Nizzia City</div>
-    <div class="ticker">
-      <div id="news-ticker" class="ticker__track">Loading news…</div>
-    </div>
-    <div class="spacer"></div>
-    <div class="actions">
-      <button id="btn-profile" title="Profile">Profile</button>
-      <button id="btn-logout" title="Log out">Log out</button>
-    </div>
-  </div>
+  
 
   <div class="sidebar">
     <h2>Nizzia City</h2>
@@ -41,8 +29,11 @@
 
       <p id="ui-happy-label">Happy: 0/0</p>
       <div class="progress-bar"><div class="progress-fill happy" id="ui-happy-bar" style="width: 0%;"></div></div>
+      
+  <p id="ui-hp-label">HP: 0/0</p>
+  <div class="progress-bar"><div class="progress-fill life" id="ui-hp-bar" style="width: 0%;"></div></div>
 
-      <!-- Life/Chain placeholders for future -->
+  <!-- Chain placeholder for future -->
     </div>
 
     <ul>
@@ -93,6 +84,7 @@
 
   <script src="assets/js/api.js"></script>
   <script src="assets/js/utils.js"></script>
+  <script src="assets/js/ui.js"></script>
   <script src="assets/js/pages/game.js"></script>
 
 </body>
