--- a/frontend/job.html
+++ b/frontend/job.html
@@ -8,11 +8,7 @@
   <link rel="stylesheet" href="assets/style/topbar.css" />
 </head>
 <body>
-  <div class="topbar">
-    <div class="brand">Nizzia City</div>
-    <div class="spacer"></div>
-    <a class="link" href="game.html">Home</a>
-  </div>
+  
 
   <div class="sidebar">
     <h2>Jobs</h2>
@@ -40,6 +36,7 @@
 
   <script src="assets/js/api.js"></script>
   <script src="assets/js/utils.js"></script>
+  <script src="assets/js/ui.js"></script>
   <script src="assets/js/pages/job.js"></script>
 </body>
 </html>
