--- a/frontend/stocks.html
+++ b/frontend/stocks.html
@@ -10,11 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
-  <div class="topbar">
-    <div class="brand">Nizzia City</div>
-    <div class="spacer"></div>
-    <a class="link" href="game.html">Home</a>
-  </div>
+  
 
   <div class="sidebar">
     <h2>Stock Market</h2>
@@ -57,6 +53,7 @@
 
   <script src="assets/js/api.js"></script>
   <script src="assets/js/utils.js"></script>
+  <script src="assets/js/ui.js"></script>
   <script src="assets/js/pages/stocks.js"></script>
 </body>
 </html>
