feat: Implement real estate system with daily upkeep and property management
- Added daily reset cron job to accrue upkeep for players' properties.
- Enhanced job cron job to process players using a cursor for efficiency.
- Updated NPC actions to reduce happiness based on gym training energy spent.
- Modified bank actions to allow a wider range of cash deposits.
- Adjusted NPC actions frequency from every 10 minutes to every 5 minutes.
- Removed warm-up snapshot in player snapshots to optimize memory usage.
- Refactored energy, happiness, and nerve regeneration to use bulk updates for efficiency.
- Extended Player model to include properties and casino-related state.
- Introduced real estate routes for property management (buy, sell, upgrade).
- Created frontend pages for real estate and property management with corresponding JavaScript functionality.
- Updated UI to include real estate options in the city map and navigation.

--- a/frontend/city.html
+++ b/frontend/city.html
@@ -19,6 +19,8 @@
       <li><a href="gym.html">Gym</a></li>
       <li><a href="bank.html">Bank</a></li>
       <li><a href="inventory.html">Inventory</a></li>
+      <li><a href="real-estate.html">Real Estate</a></li>
+      <li><a href="property.html">Property</a></li>
     </ul>
   </div>
 
