--- a/frontend/game.html
+++ b/frontend/game.html
@@ -46,6 +46,7 @@
       <li><a href="stocks.html">Stocks</a></li>
       <li><a href="crimes.html">Crimes</a></li>
       <li><a href="money.html">Money</a></li>
+      <li><a href="property.html">Property</a></li>
     </ul>
 
     <div id="dev-menu" class="info u-mt-16">
