Add Credits and Rules pages
- Created a new Credits.vue page to acknowledge contributors and supporters.
- Created a new Rules.vue page outlining the basic rule: "Don't do anything."

--- a/backend/tools/itemCreator.html
+++ b/backend/tools/itemCreator.html
@@ -132,6 +132,7 @@
               <option value="drug">drug</option>
               <option value="booster">booster</option>
               <option value="medical">medical</option>
+              <option value="alcohol">alcohol</option>
             </select>
           </div>
           <div>
