--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -73,6 +73,42 @@
       </div>
 
       <div class="admin-card">
+        <h2>Moderation</h2>
+        <div class="row">
+          <div>
+            <label>Status</label>
+            <select id="modStatus">
+              <option value="Active">Active</option>
+              <option value="Suspended">Suspended</option>
+              <option value="Banned">Banned</option>
+              <option value="Abandoned">Abandoned</option>
+            </select>
+          </div>
+          <div>
+            <label>Role</label>
+            <select id="modRole">
+              <option value="Player">Player</option>
+              <option value="Moderator">Moderator</option>
+              <option value="Admin">Admin</option>
+              <option value="Developer">Developer</option>
+            </select>
+          </div>
+          <div>
+            <label>Title</label>
+            <select id="modTitle">
+              <option value="">Loading...</option>
+            </select>
+          </div>
+        </div>
+        <div class="actions" style="margin-top:10px">
+          <button id="applyStatus">Set Status</button>
+          <button id="applyRole">Set Role</button>
+          <button id="applyTitle">Set Title</button>
+          <span class="muted">Role/Status changes require admin token; Developer required to assign Developer.</span>
+        </div>
+      </div>
+
+      <div class="admin-card">
         <h2>Currencies</h2>
         <div class="row">
           <div><label>Money Δ</label><input id="moneyDelta" type="number" placeholder="e.g. 50000 or -2500" /></div>
@@ -144,6 +180,36 @@
       </div>
 
       <div class="admin-card">
+        <h2>Cooldowns</h2>
+        <div class="actions">
+          <button id="cdLoad">Load Current</button>
+        </div>
+        <div class="list" id="cdCurrent"></div>
+        <div class="row" style="margin-top:8px">
+          <div><label>Drug (sec)</label><input id="cdDrug" type="number" min="0" /></div>
+          <div><label>Medical (sec)</label><input id="cdMedical" type="number" min="0" /></div>
+          <div><label>Booster (sec)</label><input id="cdBooster" type="number" min="0" /></div>
+          <div><label>Alcohol (sec)</label><input id="cdAlcohol" type="number" min="0" /></div>
+        </div>
+        <div class="actions" style="margin-top:10px">
+          <button id="cdSetDrug">Set Drug</button>
+          <button id="cdSetMedical">Set Medical</button>
+          <button id="cdSetBooster">Set Booster</button>
+          <button id="cdSetAlcohol">Set Alcohol</button>
+          <button id="cdClearAll" class="secondary">Clear All for Player</button>
+        </div>
+        <div class="row" style="margin-top:12px">
+          <div>
+            <label>Include NPCs</label>
+            <select id="cdIncludeNPC"><option value="false">false</option><option value="true">true</option></select>
+          </div>
+          <div class="actions">
+            <button id="cdResetAll" class="secondary" title="Reset all cooldowns across players">Reset All Cooldowns (Global)</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="admin-card">
         <h2>Create Item (minimal)</h2>
         <div class="row">
           <div><label>Name</label><input id="itemName" /></div>
@@ -190,6 +256,18 @@
           <button id="loadAccounts">Load Accounts</button>
         </div>
         <div class="list" id="bankList"></div>
+      </div>
+
+      <div class="admin-card">
+        <h2>Database (Danger)</h2>
+        <div class="muted">Requires Developer role and explicit confirmation. This drops the entire database.</div>
+        <div class="inline" style="margin-top:8px">
+          <div>
+            <label>Type DROP to confirm</label>
+            <input id="dbConfirm" placeholder="DROP" />
+          </div>
+          <button id="dbPurge" class="secondary">Purge Database</button>
+        </div>
       </div>
     </main>
 
